fix alignments and spacing

--- a/vista-checking-system/vista-checkin-system/assets/css/styles.css
+++ b/vista-checking-system/vista-checkin-system/assets/css/styles.css
@@ -436,35 +436,41 @@ body {
 }
 
 
-/* Table Header Alignment */
+/* Table Header Alignment - FIXED WIDTH COLUMNS */
 .table thead.table-dark th:nth-child(1) { /* No column */
     text-align: center;
-    width: 60px;
+    width: 50px;
+    min-width: 50px;
 }
 
 .table thead.table-dark th:nth-child(2) { /* Membership & Passenger Name */
     text-align: left;
-    width: 35%;
+    width: 250px;
+    min-width: 250px;
 }
 
 .table thead.table-dark th:nth-child(3) { /* Tier */
     text-align: center;
     width: 80px;
+    min-width: 80px;
 }
 
 .table thead.table-dark th:nth-child(4) { /* Flight No */
     text-align: center;
-    width: 100px;
+    width: 90px;
+    min-width: 90px;
 }
 
 .table thead.table-dark th:nth-child(5) { /* Date & Time */
     text-align: center;
     width: 120px;
+    min-width: 120px;
 }
 
 .table thead.table-dark th:nth-child(6) { /* Actions */
     text-align: center;
     width: 80px;
+    min-width: 80px;
 }
 
 /* Table Body Alignment */
